Add clang format check and fix formatting